--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.28)
-project(untitled)
+project(BaekJun)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Out 단계별문제/단계별문제_일반수학1/7_4_2903.cpp)
+add_executable(Out 단계별문제/단계별문제_12_브루트포스/13_3_19532_수학은비대면강의입니다.cpp)
